add npm scripting for scss compiling and dev environment tools

--- a/webroot/_config.yml
+++ b/webroot/_config.yml
@@ -26,4 +26,9 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-theme: minima
+#theme: minima
+exclude:
+  - bower_components
+  - node_modules
+keep_files:
+  - css
